--- a/app/src/main/res/layout/view_match_item.xml
+++ b/app/src/main/res/layout/view_match_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.github.teocci.recyclercodesample.adapters.GameItemView
+<com.github.teocci.recyclercodesample.views.GameItemView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -67,4 +67,4 @@
         android:src="@drawable/ic_launcher"
         android:contentDescription="@string/description_logo_team_home"/>
 
-</com.github.teocci.recyclercodesample.adapters.GameItemView>
+</com.github.teocci.recyclercodesample.views.GameItemView>
